# netease-cloud-music-gtk

./: .buildconfig  .gitignore  Cargo.toml  README.md  build.rs  com.gitee.gmg137.NeteaseCloudMusicGtk4.json  meson.build  netease-cloud-music-gtk.desktop
.github/ISSUE_TEMPLATE/: bug-提交.md  功能请求.md
.github/actions/appimage/: action.yml
.github/actions/deb/: action.yml
.github/actions/dmg/: action.yml
.github/actions/rpm/: action.yml
.github/workflows/: meson.yml  nightly.yml  release.yml  rust.yml
.rpm/: netease-cloud-music-gtk.spec
build-aux/: cargo.sh
data/: com.gitee.gmg137.NeteaseCloudMusicGtk4.appdata.xml.in  com.gitee.gmg137.NeteaseCloudMusicGtk4.desktop.in  com.gitee.gmg137.NeteaseCloudMusicGtk4.gschema.xml  com.gitee.gmg137.NeteaseCloudMusicGtk4.metainfo.xml.in  meson.build  netease_cloud_music_gtk4.gresource.xml
data/gtk/: discover.ui  help-overlay.ui  my-page.ui  player-controls.ui  playlist-lyrics-page.ui  preferences.ui  search-singer-page.ui  search-song-page.ui  search-songlist-page.ui  singer-page.ui  songlist-page.ui  songlist-row.ui  songlist-view.ui  theme-selector.ui  toplist.ui  user-menus.ui  window.ui
data/icons/: meson.build
data/themes/: discover.css  themesselector.css
po/: POTFILES  meson.build  netease-cloud-music-gtk4.pot  zh_CN.po
src/: app.rs  application.rs  background.rs  config.rs  config.rs.in  data.rs  main.rs  meson.build  model.rs  ncmapi.rs  path.rs  signal.rs  task.rs  utils.rs  window.rs
src/audio/: mod.rs  mpris.rs  playlist.rs
src/gui/: discover.rs  mod.rs  my_page.rs  ncm_paintable.rs  player_controls.rs  playlist_lyrics.rs  preferences.rs  search_singer_page.rs  search_song_page.rs  search_songlist_page.rs  singer_page.rs  songlist_grid_item.rs  songlist_page.rs  songlist_row.rs  songlist_view.rs  system_tray.rs  theme_selector.rs  toplist.rs  user_menus.rs
src/musicapi/: encrypt.rs  mod.rs  model.rs
src/view/: found.rs  home.rs  mine.rs  mod.rs  subpages.rs
src/view/mine/: fm.rs  list.rs  mod.rs
src/widgets/: header.rs  mod.rs  notice.rs  player.rs  preferences.rs  tray.rs
ui/: found.ui  home.ui  inapp_notif.ui  mine_fm.ui  mine_list.ui  mine_login.ui  mine_not_login.ui  subpages.ui  window.ui
