[package]
name = "netease-cloud-music-gtk4"
version = "2.5.3"
edition = "2024"

[dependencies]
gettext-rs = { version = "~0.7", features = ["gettext-system"] }
gtk = { version = "~0.11", package = "gtk4" }
once_cell = "~1.21"
qrcode-generator = "~5.0"
# ncm-api = { git = "https://github.com/gmg137/netease-cloud-music-api.git", branch = "dev", package = "netease-cloud-music-api" }
ncm-api = { git = "https://gitee.com/gmg137/netease-cloud-music-api.git", tag = "1.5.2", package = "netease-cloud-music-api" }
anyhow = "~1.0"
gstreamer = "~0.25"
gstreamer-play = "~0.25"
fastrand = "~2.3"
mpris-server = "~0.9"
regex = "~1.12"
log = "~0.4"
env_logger = "~0.11"
cookie_store = "~0.22"
chrono = "~0.4"
async-channel = "~2.5"
ksni = "~0.2"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
image = "~0.25"

[dependencies.adw]
package = "libadwaita"
version = "~0.9"
features = ["v1_6"]


[package.metadata.bundle]
icon = ["data/icons/hicolor/512x512@2x.png"]
osx_minimum_system_version = "11.0"
